#4 fix test - still running on jdk8